added updates to config

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ .Site.SiteDescription }}">
-    <meta name="author" content="{{ .Site.Author }}">
+    <meta name="description" content="{{ .Site.Params.SiteDescription }}">
+    <meta name="author" content="{{ .Site.Params.Author }}">
 
     <title>{{ .Title }} -- {{ .Site.Title }}</title>
 
