--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ .Site.Params.SiteDescription }}">
     <meta name="author" content="{{ .Site.Params.Author }}">
+    <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}/img/apple-touch-icon.png">
 
     <title>{{ .Title }} -- {{ .Site.Title }}</title>
 
