added code to disable long touch select on mobile

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -35,6 +35,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{{ .Site.BaseURL }}/js/bootstrap.min.js"></script>
+    <!-- Turn Off right clicking global -->
 	<script>
 		$(document).ready(function () {
    $("body").on("contextmenu",function(e){
