--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -31,10 +31,10 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="{{ .Site.BaseURL }}/js/jquery.min.js"></script>
+    <script src="{{ .Site.BaseURL }}/js/jquery.min.js.gz"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{ .Site.BaseURL }}/js/bootstrap.min.js"></script>
+    <script src="{{ .Site.BaseURL }}/js/bootstrap.min.js.gz"></script>
     <!-- Turn Off right clicking global -->
 	<script>
 		$(document).ready(function () {
@@ -44,7 +44,7 @@
 });
 </script>
     <!-- Custom Theme JavaScript -->
-    <script src="{{ .Site.BaseURL }}/js/clean-blog.js"></script>
+    <script src="{{ .Site.BaseURL }}/js/clean-blog.js.gz"></script>
 
     {{ if isset .Site.Params "Ganalytics" }}{{ partial "ga.html" . }}{{ end }}
 
