--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -24,7 +24,7 @@
                     </li>
                     {{ end }}
                   </ul>
-                  <p class="copyright text-muted">{{ .Site.Copyright }}</p>
+                  <p class="copyright text-muted"><a href='me.html'>&#415;</a>{{ .Site.Copyright }}</p>
                 </div>
             </div>
         </div>
