added footer links properly

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -24,7 +24,11 @@
                     </li>
                     {{ end }}
                   </ul>
-                  <p class="copyright text-muted"><a href='me.html'>&#415;</a>{{ .Site.Copyright }}</p>
+                  <p class="copyright text-muted">
+	                  <a style='text-decoration:none;'href='me'>&#450;</a>
+	                  {{ .Site.Copyright }}
+	                  <a style='text-decoration:none;'href='key.asc'>&#450;</a>
+	              </p>
                 </div>
             </div>
         </div>
