--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,6 +1,5 @@
-{{ partial "header.html" .}}
-
-    <!-- Page Header -->
+    {{ partial "header.html" }}
+<!-- 
     <header class="intro-header" style="background-image: url('{{ .Site.BaseURL }}/img/home-bg.jpg')">
      <div class="container">
        <div class="row">
@@ -13,15 +12,17 @@
          </div>
        </div>
      </div>
-    </header>
+    </header>-->
 
     <!-- Main Content -->
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="post-preview">
-          <p class="post-meta"><a href="{{ .URL }}">Index</a>
+<br /> <br />          
+<p class="post-meta"><a href="{{ .URL }}">The page you were looking for does not exist, try searching the:</a>
             <br />
           </p>
+ <iframe src="//giphy.com/embed/14fs128vvqge3e" style="max-width: 100vw;max-height: 56.25vw;" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mrw-confusedtravolta-groceries-14fs128vvqge3e"></a></p>
         </div>
         <div class="post-preview">
           <p class="post-meta"><a href="{{ .Site.BaseURL }}/post/">Archives</a>
