--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
     <meta name="author" content="{{ .Site.Params.Author }}">
     <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}/img/apple-touch-icon.png">
 
-    <title>{{ .Title }} -- {{ .Site.Title }}</title>
+    <title>NOT FOUND - But You FOUND VEGA!</title>
 
     {{ if .RSSlink }}
     <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
