--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,7 +27,7 @@
                   <p class="copyright text-muted">
 	                  <a style='text-decoration:none;'href="{{ .Site.BaseURL }}/me">&#450;</a>
 	                  {{ .Site.Copyright }}
-	                  <a style='text-decoration:none;'href="{{ .Site.BaseURL }}/key.asc">&#450;</a>
+	                  <a style='text-decoration:none;'href="{{ .Site.BaseURL }}/key">&#450;</a>
 	              </p>
                 </div>
             </div>
