--- a/layouts/shop/single.html
+++ b/layouts/shop/single.html
@@ -15,7 +15,7 @@
      </div>
      <!-- specific for paddle.com checkout -->
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script async src="https://paddle.s3.amazonaws.com/checkout/paddle.js"></script>
+<script async src="https://cdn.paddle.com/paddle/paddle.js"></script>
     </header>
 
     <!-- Main Content -->
