--- a/layouts/post/summary.html
+++ b/layouts/post/summary.html
@@ -5,6 +5,9 @@
                     </a>
                     <p class="post-meta">Posted by <a href="#">{{ .Site.Params.Author }}</a> on {{ dateFormat .Site.Params.DateForm .Date }}
                     <br />
+                    Last Updated on {{ dateFormat .Site.Params.DateForm .Lastmod }}
+                    <br />
+                    <br />
                     {{ partial "categories.html" .}}
                     <br />
                     {{ partial "tags.html" .}}
